# SessionConflux-FeatherLog

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  config.example.toml  config.example.yaml  go.mod  go.sum  go.work  go.work.sum  pyproject.toml  update_check.json
.github/workflows/: desktop-release.yml  release.yml
agentsview/: .air.toml  .custom-gcl.yml  .gitignore  .golangci.nilaway.yml  .golangci.yml  .roborev.toml  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.test.yml  go.mod  go.sum  prek.toml
agentsview/.github/: dependabot.yml
agentsview/desktop/: README.md  package-lock.json  package.json
agentsview/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
agentsview/desktop/src-tauri/icons/: icon.icns
agentsview/desktop/src-tauri/src/: lib.rs  main.rs
agentsview/docs/: desktop-release-setup.md
agentsview/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
agentsview/scripts/: build_wheels.py  build_wheels_test.py  changelog.sh  desktop-dev.ps1  dev-backend-build.sh  e2e-server.sh  install.ps1  install.sh  install_test.sh  release.sh
cmd/session-conflux/: main.go
conflux/: __init__.py  cache.py  cli.py  config.py  engine.py  logger.py  models.py
conflux/parsers/: __init__.py  base.py  claude.py  codex.py  workbuddy.py
conflux/uploaders/: feishu.py
docs/adr/: 0001-feishu-drive-as-transport.md  0002-jsonl-archives-over-sqlite-dumps.md  0003-write-through-agent-dirs.md  (+1 more)
viewer/: index.html  server.py
(+654 files in other folders)
