[project]
name = "session-conflux"
version = "0.1.0"
description = "Aggregate AI agent session records from multiple computers to Feishu Bitable"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "watchdog>=4.0",
    "click>=8.1",
]

[project.scripts]
conflux = "conflux.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"
