[package]
name = "agentsview-desktop"
version = "0.1.0"
description = "AgentsView desktop wrapper"
authors = ["Wes McKinney"]
edition = "2021"

[lib]
name = "agentsview_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["time", "sync"] }
